# openmarina

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
src/openmarina/: __init__.py  __main__.py  cli.py  conformance.py  core.py  geocode.py  types.py  vocabulary.py
src/openmarina/adapters/: __init__.py  coops.py  erddap.py  ndbc.py
tests/: test_cli.py  test_conformance.py  test_coops.py  test_core_multi.py  test_core_nearest.py  test_erddap.py  test_geocode.py  test_ndbc.py  test_smoke.py  test_types.py  test_vocabulary.py
tests/fixtures/coops/: air_pressure.json  error.json  water_level.json  wind.json
tests/fixtures/erddap/: buoy.json
tests/fixtures/ndbc/: 41122.txt
