[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmarina"
version = "0.0.1"
description = "The open marina for maritime data — one clean Python interface over fragmented US public marine data (NDBC, tides & currents, and more)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Jiwon Baik" },
]
keywords = [
    "marine", "maritime", "ocean", "ndbc", "noaa", "buoy",
    "oceanography", "metocean", "tides", "data", "open-data",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
geo = ["pgeocode>=0.4"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
openmarina = "openmarina.cli:main"

[project.urls]
Homepage = "https://github.com/magomarine/openmarina"
Repository = "https://github.com/magomarine/openmarina"
Issues = "https://github.com/magomarine/openmarina/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openmarina"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
